<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">

    <EditText
        android:layout_marginTop="20dp"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:hint="@string/user_id"
        android:textColorHint="#AAFFFFFF"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:id="@+id/user"
        android:autofillHints="" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:id="@+id/connect" />

    <EditText
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:hint="@string/message"
        android:textColorHint="#AAFFFFFF"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:id="@+id/message"
        android:autofillHints="" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:id="@+id/send" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/the_coversation_will_appear_here_n"
        android:textColor="@color/white"
        android:textColorHint="#AAFFFFFF"
        android:textSize="20sp"

        />

</LinearLayout>
