<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools='http://schemas.android.com/tools'
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".TakeNotes">

    <TextView
        android:id="@+id/textMyNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="12sp"
        android:includeFontPadding="false"
        android:text="@string/my_notes"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
            android:id='@+id/layoutSearch'
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/background_search"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/textMyNotes">

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_search"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="64dp"
        app:tint="@color/search" />

    <EditText
        android:id="@+id/inputSearch"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@null"
        android:hint="@string/search_notes"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/textHint"
        android:textSize="13sp"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecycle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:clipToPadding="false"
        android:paddingStart="0dp"
        android:paddingEnd="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintBottom_toTopOf="@id/quickActions"
        app:layout_constraintTop_toBottomOf="@id/layoutSearch" />

    <LinearLayout
        android:id="@+id/quickActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/quickActions"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/imageAddNote"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_add"
            app:tint="@color/icons" />

        <ImageView
            android:id="@+id/addImage"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_image"
            app:tint="@color/icons" />

        <ImageView
            android:id="@+id/addLink"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_language_24"
            app:tint="@color/icons" />

    </LinearLayout>

    <ImageView
        android:id="@+id/addNoteMain"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/background_add"
        android:contentDescription="@string/app_name"
        android:padding="5dp"
        android:src="@drawable/ic_notes"
        app:tint="@color/primary"
        app:layout_constraintBottom_toTopOf="@id/quickActions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/quickActions"/>

</androidx.constraintlayout.widget.ConstraintLayout>